work in progress

--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form (ngSubmit)="onEmit()" [formGroup]="form">
+  <form (ngSubmit)="emitFormData()" [formGroup]="form">
     <div *ngFor="let question of questions">
       <app-question [question]="question" [form]="form"></app-question>
     </div>
@@ -13,9 +13,4 @@
   <strong>Form Value</strong>
   <pre>{{ form.value | json }}</pre>
   <strong>Form is valid:</strong> {{form.valid}}
-</div>
-
-<div *ngIf="payLoad" class="form-row">
-  <strong>Submitted the following values</strong>
-  <br>{{payLoad}}
 </div>
