--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,12 @@
     </mat-card-subtitle>
 
     <mat-card-content>
-
+        Dieser Proof of Concept ist im Rahmen der Masterarbeit von Daniel Trüssel zum Abschluss seiner Ausbildung in Medizininformatik
+        an der BHF in Bern entstanden. Er prüft die Umsetzbarkeit des ORF IHE Profils Order & Referral by Form ORF. Das Profil
+        beschreibt, wie ein FHIR Questionnaire von einem Serviceanbieter abgeholt werden kann, anschliessend ausgefüllt und
+        an einen Serviceanbieter versendet werden kann. Im Proof of Concept wird die Suche nach einem FHIR Questionnaire,
+        das Ausfüllen in einem dynamischen HTML-Formular, das Vorausfüllen mit Patientendaten und das Versenden an einen
+        FHIR Testserver geprüft.
 
     </mat-card-content>
 
