--- a/src/app/questionnaires/questionnaire-form/questionnaire-form.component.html
+++ b/src/app/questionnaires/questionnaire-form/questionnaire-form.component.html
@@ -1,5 +1,5 @@
 <div id="container">
 
-  <app-dynamic-form [questions]="questions" (onEmit)="onEmit($event)"></app-dynamic-form>
-
+  <app-dynamic-form [questions]="questions" (formValuesFromDynForm)="submittedEvent($event)">
+  </app-dynamic-form>
 </div>
