--- a/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
+++ b/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="Questionnaires" (keyup.enter)="doSearch()">
+<mat-card class="Questionnaires" (keyup.enter)="doSearchQuery()">
   <mat-card-content>
     <div class="searchPanel">
       <mat-card-subtitle>Search Parameters</mat-card-subtitle>
@@ -44,10 +44,22 @@
       <mat-input-container floatPlaceholder="never">
         <input matInput #status placeholder="status">
       </mat-input-container>
+
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #status placeholder="searchID" click="searchID()">
+      </mat-input-container>
+
+
+
+
+
     </div>
     <br>
-    <button mat-raised-button (click)="doSearch()">
+    <button mat-raised-button (click)="doSearchQuery()">
       <span>Query Questionnaire</span>
+    </button>
+    <button mat-raised-button (click)="doSearchRetrieve()">
+      <span>Retrieve Questionnaire</span>
     </button>
     <br>
     <br>
