--- a/src/app/questionnaires/questionnaire-form/questionnaire-form.component.html
+++ b/src/app/questionnaires/questionnaire-form/questionnaire-form.component.html
@@ -1,5 +1,5 @@
 <div id="container">
 
-  <app-dynamic-form [questions]="questions" (submittedEvent)="formValuesFromDynForm($event)">
+  <app-dynamic-form [questions]="questions" (formData)="formValuesFromDynForm($event)">
   </app-dynamic-form>
 </div>
