Query Questionnaire in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         <span>Patients Test</span>
       </button>
 
-      <button mat-menu-item routerLink="/patient-detail">
+      <button mat-menu-item routerLink="/patient-detail/:id">
         <mat-icon>people</mat-icon>
         <span>Patient</span>
       </button>
