--- a/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
+++ b/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
@@ -44,10 +44,6 @@
       <mat-input-container floatPlaceholder="never">
         <input matInput #status placeholder="status">
       </mat-input-container>
-
-      <mat-input-container floatPlaceholder="never">
-        <input matInput #status placeholder="searchID" click="searchID()">
-      </mat-input-container>
     </div>
     <br>
     <button mat-raised-button (click)="doSearchQuery()">
@@ -62,9 +58,7 @@
       <mat-header-row *matHeaderRowDef="['questionnaireCol']">
         <!--Array mit nur einem Eintrag-->
       </mat-header-row>
-      <!--      <mat-row *matRowDef="let row1; columns: ['questionnaireCol']" (click)="selectRowQuery(row)">
-      </mat-row>>-->
-      <mat-row *matRowDef="let row; columns: ['questionnaireCol']" (click)="selectRowRetrieve(row)">
+      <mat-row *matRowDef="let row; columns: ['questionnaireCol']" (click)="selectRow(row)">
       </mat-row>
       <ng-container matColumnDef="questionnaireCol">
         <mat-header-cell *matHeaderCellDef>Questionnaire</mat-header-cell>
