patient-detail.component implemented

--- a/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
+++ b/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="Questionnaires" (keyup.enter)="doSearchQuery()">
+<mat-card class="Questionnaires">
   <mat-card-content>
     <div class="searchPanel">
       <mat-card-subtitle>Search Parameters</mat-card-subtitle>
