--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,12 +38,16 @@
 
       <button mat-menu-item routerLink="/capabilityStatement">
         <mat-icon>info</mat-icon>
-        <span>CapabilityStatement</span>
+        <span>Capability Statement</span>
       </button>
 
       <button mat-menu-item routerLink="/settings">
         <mat-icon>settings</mat-icon>
         <span>Settings</span>
+      </button>
+      <button mat-menu-item routerLink="/messages">
+        <mat-icon>messages</mat-icon>
+        <span>Messages</span>
       </button>
 
     </mat-menu>
