--- a/src/app/patients/patients/patients.component.html
+++ b/src/app/patients/patients/patients.component.html
@@ -1,19 +1,15 @@
-<!--<ul class="patients">
-  <li *ngFor="let patient of patients">
-    <a routerLink="/patient-detail/:id/{{patient.id}}">
-      <span class="badge">{{patient.id}}</span> {{ getPatientFamilyName(entry) }}
-    </a>
-  </li>
-</ul>-->
-
-
-
-
-
+<h2>My Patients</h2>
 <ul class="patients">
-  <li *ngFor="let patient of patients">
-    <a routerLink="/patient-detail/:id/{{patient.id}}">
-      <span class="badge">{{patient.id}}</span> {{patient.familyName}}
-    </a>
+  <li *ngFor="let patient of patients" [class.selected]="patient === selectedPatient" (click)="onSelect(patient)">
+    <span class="badge">{{patient.id}}</span> {{patient.name}} {{patient.givenNames}} {{patient.birthDate}}
   </li>
 </ul>
+
+<app-patient-detail [patient]="selectedPatient"></app-patient-detail>
+
+
+<!-- 
+Copyright 2017-2018 Google Inc. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at http://angular.io/license
+-->
