work in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,9 +26,9 @@
         <span>Patients Test</span>
       </button>
 
-      <button mat-menu-item routerLink="/patient-detail/:id">
+      <button mat-menu-item routerLink="/patient-detail">
         <mat-icon>people</mat-icon>
-        <span>Patient</span>
+        <span>Selected Patient</span>
       </button>
 
       <button mat-menu-item routerLink="/questionnaires-list">
