--- a/src/app/patients/patients/patients.component.html
+++ b/src/app/patients/patients/patients.component.html
@@ -1,9 +1,12 @@
 <h2>My Patients</h2>
 <ul class="patients">
   <li *ngFor="let patient of patients" [class.selected]="patient === selectedPatient" (click)="onSelect(patient)">
-    <span class="badge">{{patient.id}}</span> {{patient.name}} {{patient.givenNames}} {{patient.birthDate}}
+    <span class="badge">{{patient.id}}</span> {{patient.lastname}} {{patient.firstame}} {{patient.birthdate}}
   </li>
 </ul>
+
+
+<h2>app-patient-detail</h2>
 
 <app-patient-detail [patient]="selectedPatient"></app-patient-detail>
 
